--- a/anagrafica-svi.properties
+++ b/anagrafica-svi.properties
@@ -1,3 +1,2 @@
-env.config= Sviluppo config anagrafica
-host.name = localhost
-host.port = 8080
+env.config= Test config anagrafica
+common.config= common per sviluppo anagrafica
