--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,5 @@
 common.config=A common configuration 1
 env.config= A common env 1
+microservice.anagrafica.mainpath=/api/anagrafica
+microservice.anagrafica.host=http://localhost
+microservice.anagrafica.port=8082
