--- a/application.properties
+++ b/application.properties
@@ -3,3 +3,5 @@ env.config= A common env 1
 microservice.anagrafica.mainpath=/api/anagrafica
 microservice.anagrafica.host=http://localhost
 microservice.anagrafica.port=8082
+esb.host=localhost
+esb.port=9081
