--- a/application.properties
+++ b/application.properties
@@ -5,3 +5,5 @@ microservice.anagrafica.host=http://localhost
 microservice.anagrafica.port=8082
 esb.host=localhost
 esb.port=9081
+microservice.esb.api.exp=/api/zurich-exp/quotazione
+microservice.esb.api.exp.getModelContrattoIniziale=/getModelContrattoInziale
