--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,8 @@
 common.config=A common configuration 1
 env.config= A common env 1
-microservice.anagrafica.mainpath=/api/anagrafica
+microservice.anagrafica.mainpath=/cliente
 microservice.anagrafica.host=http://localhost
-microservice.anagrafica.port=8082
+microservice.anagrafica.port=32013
 esb.host=localhost
 esb.port=9081
 microservice.esb.api.exp=/api/zurich-exp/quotazione
