--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 common.config=A common configuration 1
 env.config= A common env 1
-microservice.anagrafica.mainpath=/cliente
+microservice.anagrafica.mainpath=/anagrafica/cliente
 #microservice.anagrafica.host= http://172.17.0.4
 microservice.anagrafica.host=localhost
 microservice.anagrafica.port=8080
