--- a/application.properties
+++ b/application.properties
@@ -2,7 +2,7 @@ common.config=A common configuration 1
 env.config= A common env 1
 microservice.anagrafica.mainpath=/anagrafica/cliente
 #microservice.anagrafica.host= http://172.17.0.4
-microservice.anagrafica.host=127.0.0.1
+microservice.anagrafica.host=http://127.0.0.1
 microservice.anagrafica.port=8080
 esb.host=localhost
 esb.port=9081
